# ChangeLog for games-misc/opensfx
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  27 Mar 2010; Locke Shinseiko <wizzleby@gmail.com> opensfx-0.2.2.ebuild:
  upstream directory structure changed, we need -source at the end of S

*opensfx-0.2.2 (27 Mar 2010)

  27 Mar 2010; Locke Shinseiko <wizzleby@gmail.com> -opensfx-0.2.1.ebuild,
  +opensfx-0.2.2.ebuild:
  Bump to v0.2.2

*opensfx-0.2.1 (15 Mar 2010)

  15 Mar 2010; Locke Shinseiko <wizzleby@gmail.com> +opensfx-0.2.1.ebuild,
  +metadata.xml:
  Initial commit.
