@@ -1,4 +1,4 @@
-DIST opensfx-0.2.2-source.tar.gz 11365065 RMD160 4f8177c50f8c1daf208bbd73b733b8c36fe912e4 SHA1 cd49c26c6169d1c192250b0456b80700cc576e3f SHA256 423f97e5278c260278459977d9aded86712fd508de76ed1b70e26fb2b5e7c8a6
-EBUILD opensfx-0.2.2.ebuild 696 RMD160 9f9878bd37f0be4de24fe7141453f18d0dec7dd8 SHA1 e9aaea1d4a09c6546e97984b97a8759925600428 SHA256 e3df4f5489a8a842d7c866904476442c9824f59bab627e6d6d06dd336a1b9f7f
-MISC ChangeLog 555 RMD160 98ab3315910dd4f3f6748d3b2e725d3a9607009b SHA1 f67713e7357d45e29fbe61645442116f68d06a5e SHA256 20fd9b0b406de9d3cffb4c22e2825025a445c2c9f006bea27eb1ef02414af85f
+DIST opensfx-0.2.3-source.tar.gz 11364270 RMD160 f2ad06e8ce88b1172135ef3d82d028d3063a4cb2 SHA1 6271761869df0ad410ca53e9ab900c2fb26c288d SHA256 e512b855cb6d271f98bb894d25916ee0ac795907b013d8748561e829c07d5d0e
+EBUILD opensfx-0.2.3.ebuild 686 RMD160 a68e56dda5c596140bf53f403d8bd70c66f3fcc9 SHA1 eb0ec5ac7106c819a0d8c8f9c0bb72fb79f847b2 SHA256 a54d5f9f9f6258b8a762728ed4dc201e6956b178adb16a833a771ad6b25ba90d
+MISC ChangeLog 698 RMD160 3bbc788cc7a259fa9ce1d3587cd7f25e622039bf SHA1 614251b1e41e2c092b6b092744e1a81745cfe30e SHA256 4b39505cbbdbc9085bfb13b60d8a39dff10287c12b2096a2a4be9ae232677ed5
 MISC metadata.xml 255 RMD160 201d9fcefc2f951254a005920dbe670de52cddb7 SHA1 656d851d6e5bfce4f36e4716294371e7e824cbc8 SHA256 c82dd2a5de54dec4a04408daf35d17b3a5f63be56a21272affad096405c18c71
