@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*opensfx-0.2.3 (31 Mar 2010)
+
+  31 Mar 2010; Piotr Szymaniak <lazy_bum@o2.pl> -opensfx-0.2.2.ebuild,
+  +opensfx-0.2.3.ebuild:
+  Version bump.
+
   27 Mar 2010; Locke Shinseiko <wizzleby@gmail.com> opensfx-0.2.2.ebuild:
   upstream directory structure changed, we need -source at the end of S
 
